# feather-wms

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md
include/: PickableLocation.hpp  Util.hpp  fwmscore.hpp
include/client/: AdminMenu.hpp  BaseMenu.hpp
include/client/Locations/: AddLocation.hpp  EditLocation.hpp  LocationMenu.hpp  RemoveLocation.hpp
include/client/Products/: AddProduct.hpp  EditProduct.hpp  ProductMenu.hpp  RemoveProduct.hpp
include/core/: Product.hpp  QueryManager.hpp  Util.hpp
include/core/Locations/: BaseLocation.hpp  NonPickableLocation.hpp  PickableLocation.hpp
sql/build-db/: create_database.sql  create_location_table.sql  create_products_table.sql
sql/locations/: check_location_exists.sql  insert_new_location.sql
src/: CMakeLists.txt  PickableLocation.cpp  Util.cpp  driver.cpp
src/PickableLocation/: PickableLocation.cpp
src/client/: AdminMenu.cpp  BaseMenu.cpp  CMakeLists.txt  ProductMenu.cpp  wmsclient.cpp
src/client/Locations/: AddLocation.cpp  EditLocation.cpp  LocationMenu.cpp  RemoveLocation.cpp
src/client/Menus/: AdminMenu.cpp  BaseMenu.cpp  ProductMenu.cpp
src/client/Products/: AddProduct.cpp  RemoveProduct.cpp
src/client/sql/locations/: check_location_exists.sql  check_nonpickable_location_exists.sql  delete_location.sql  fetch_location.sql  insert_new_location.sql  update_is_active.sql
src/client/sql/products/: check_product_exists.sql  insert_new_product.sql  remove_product.sql
src/core/: CMakeLists.txt  Product.cpp  QueryManager.cpp  Util.cpp
src/core/Locations/: BaseLocation.cpp  NonPickableLocation.cpp  PickableLocation.cpp
src/core/Locations/NonPickableLocation/: NonPickableLocation.cpp  NonPickableLocation_Internal.cpp
src/core/Locations/PickableLocation/: PickableLocation_Internal.cpp
src/core/PickableLocation/: PickableLocation.cpp  PickableLocation_Internal.cpp
